@@ -45,14 +45,15 @@
    type="pixmap" pixmap="paneldiv" />
 -->
 
-  <layer x="4" y="4" w="100%-100" h="20" 
-   type="label" color="white" justify="center" font="titlefont" />
+  <layer x="8" y="4" w="100%-100" h="20" 
+   type="label" color="white" justify="left" font="titlefont" />
 
   <button x="100%-28" y="3" w="19" h="19" action="close" >
-   <active pixmap="closebuttondown" />
-   <inactive pixmap="closebutton" />
+   <active pixmap="closebutton" />
+   <inactive pixmap="closebuttondown" />
   </button>
 
+<!-- for panel in titlebar
   <layer x="100%-100" y="0" w="object"  h="object" 
    type="pixmap" pixmap="panelleft" />
 
@@ -61,7 +62,7 @@
 
   <layer x="100%-40" y="0" w="object"  h="object" 
    type="pixmap" pixmap="panelright" />
-
+-->
    <panel x="100%-94" y="1" w="54" h="20" />
 
 </frame>
@@ -121,8 +122,8 @@
    type="label" color="white" justify="center" font="titlefont" />
 
   <button x="100%-24" y="3" w="19" h="19" action="close" >
-   <active pixmap="closebuttondown" />
-   <inactive pixmap="closebutton" />
+   <active pixmap="closebutton" />
+   <inactive pixmap="closebuttondown" />
   </button>
   
 </frame>
