@@ -1,3 +1,9 @@
+2005-09-30  mallum,,,  <mallum@openedhand.com>
+
+	* Clearlooks/matchbox/theme.desktop.in:
+	* Clearlooks/matchbox/theme.xml:
+	Clearlooks tweaks
+
 2005-09-30  mallum  <mallum@openedhand.com>
 
 	* Clearlooks/background/Makefile.am:
